# OpenOA

./: .all-contributorsrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  contributing.md  contributing_internal.md  environment.yml  openoa-env-2.7.yml  openoa-env-3.7.yml  paper.bib  paper.md  plant_analysis_timeres.py  project_goals.md  public_release.md  pyproject.toml  pytest.ini  readme.md  requirements-python3.txt  requirements.txt  setup.py
.github/workflows/: ci-pushpull.yml  ci-regression.yml  ci-tests.yml  pypi-publish.yml  python-ci.yml  tags-to-pypi.yml
.ipython/profile_default/: history.sqlite
Open OA Final Logos/Color/: Open OA Color CMYK.eps  Open OA Color RGB.eps
Open OA Final Logos/Grayscale/: Open OA Grayscale-02.eps
Open OA Final Logos/Reversed/: Open OA Reversed Grayscale.eps  Open OA Reversed White-04.eps
examples/: 00_intro_to_openoa.ipynb  00_intro_to_plant_data.ipynb  00_toolkit_examples.ipynb  00_toolkit_examples_entr.ipynb  00_v3_demonstration.ipynb  00_v3_toolkit_examples.ipynb  01_qc_data.ipynb  01_utils_examples.ipynb  01a_qc_tz_unaware_data.ipynb  01b_qc_tz_aware_data.ipynb  02_plant_aep_analysis.ipynb  02_plant_aep_analysis_cubico.ipynb  02_plant_aep_analysis_entr.ipynb  02a_plant_aep_analysis.ipynb  02b_augmented_plant_aep_analysis.ipynb  02b_plant_aep_analysis_cubico.ipynb  02c_augmented_plant_aep_analysis.ipynb  02c_plant_aep_analysis_cubico.ipynb  03_turbine_ideal_energy.ipynb  04_electrical_losses.ipynb  05_eya_gap_analysis.ipynb  06_graphics.ipynb  06_wake_loss_analysis.ipynb  07_static_yaw_misalignment.ipynb  APIKEY  README.md  Untitled.ipynb  __init__.py  plant_meta.yml  project_Cubico.py  project_ENGIE.py  requirements.txt
examples/QC_analysis/: .hscfg  Engie_turbine_QC.ipynb  engie_project.py  project_engie.py  project_engie_scada.py
examples/data/: plant_meta.json  plant_meta.yml  readme.md
examples/entr/: 00_intro_to_plant_data.ipynb  00_toolkit_examples_entr.ipynb  01_utils_examples.ipynb  02_plant_aep_analysis_entr.ipynb  02b_augmented_plant_aep_analysis.ipynb  02c_multiple_plants_using_map_entr.ipynb  03_multiple_plants_using_map_entr.ipynb  03_turbine_ideal_energy.ipynb  04_electrical_losses.ipynb  Pyspark.ipynb  openoav3_aep_analysis_entr.ipynb
examples/eya_gap_analysis/: eya_gap_analysis_example.ipynb
examples/operational_AEP_analysis/: operational_AEP_analysis.ipynb  project_EIA.py
examples/standard_workflow/: Base_Turbine_Productivity_Report.ipynb  Standard_Report_Example.ipynb  turbine_project.py
examples/turbine_analysis/: EngieTurbineData_Example.ipynb  Turbine_Toolkit_Examples.ipynb  engie_project.py  turbine_project.py
openoa/: __init__.py  logging.py  plant.py
openoa/analysis/: __init__.py  _analysis_validators.py  aep.py  electrical_losses.py  eya_gap_analysis.py  plant_analysis.py  quality_check_automation.py  turbine_long_term_gross_energy.py  wake_losses.py  yaw_misalignment.py
openoa/methods/: electrical_losses.py  eya_gap_analysis.py  plant_analysis.py  quality_check_automation.py  turbine_long_term_gross_energy.py
openoa/schema/: README.md  __init__.py  base_electric_losses_schema.json  base_electrical_losses_schema.json  base_electrical_losses_schema.yml  base_monte_carlo_aep_schema.json  base_monte_carlo_aep_schema.yml  base_monthe_carlo_aep_schema.json  base_monthe_carlo_aep_schema.yml  base_tie_schema.json  base_tie_schema.yml  base_wake_losses_schema.json  base_wake_losses_schema.yml  base_yaw_misalignmental_losses_schema.json  base_yaw_misalignmental_losses_schema.yml  full_schema.json  full_schema.yml  metadata.py  scada_wake_losses_schema.json  (+10 more)
operational_analysis/: __init__.py
paper/: paper.bib  paper.md  paper_v1.md
sphinx/: Makefile  Turbine_Toolkit_Examples.rst  analysis.rst  conf.py  contributing.rst  credit.rst  examples.ipynb  examples.rst  index.md  index.rst  install.rst  make.bat  methods.rst  operational_AEP_analysis.rst  refs.bib  requirements.txt  toolkits.rst  types.rst
test/: __init__.py  conftest.py  int_electrical_losses.py  int_electrical_losses_uq.py  int_eya_gap_analysis.py  int_pruf_plant_analysis.py  int_turbine_long_term_gross_energy.py  int_turbine_long_term_gross_energy_uq.py  test_filter_toolkit.py  test_imputing_toolkit.py  test_met_data_processing_toolkit.py  test_ml_toolkit.py  test_power_curve_toolkit.py  test_timeseries_toolkit.py  test_unit_conversion_toolkit.py
(+137 files in other folders)
