[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenOA"
dynamic = ["version"]
authors = [{name = "NREL PRUF OA Team", email = "openoa@nrel.gov"}]
readme = {file = "README.md", content-type = "text/markdown"}
description = "A package for collecting and assigning wind turbine metrics"
requires-python = ">=3.8, <3.12"
license = {file = "LICENSE.txt"}
dependencies = [
    "scikit-learn>=1.0",
    "requests>=2.21.0",
    "eia-python>=1.22",
    "pyproj>=3.5",
    "shapely>=1.8",
    "numpy>=1.24",
    "pandas>=2.2",
    "pygam>=0.9.0",
    "scipy>=1.7",
    "statsmodels>=0.11; python_version<'3.11'",
    "statsmodels>=0.13.3; python_version=='3.11'",
    "tqdm>=4.28.1",
    "matplotlib>=3.6",
    "bokeh>=3.3",
    "attrs>=22.2",
    "pytz",
    "pyyaml",
    "tabulate",
    "ipython",
]
keywords = [
    "python3",
    "wind-energy",
    "operations",
    "operational-analysis",
    "operational-assessement",
    "turbine-performance",
    "wind-plant-performance",
]
classifiers = [  # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
source = "https://github.com/NREL/OpenOA"
documentation = "https://openoa.readthedocs.io/"
issues = "https://github.com/NREL/OpenOA/issues"
changelog = "https://github.com/NREL/OpenOA/blob/main/CHANGELOG.md"

[project.optional-dependencies]
develop = [
  "pre-commit",
  "black",
  "isort",
  "flake8",
  "flake8-docstrings",
  "pytest>=5.4.2",
  "pytest-cov>=2.8.1",
]
docs = [
  "Sphinx>=5.0,!=7.2.0",
  "pydata-sphinx-theme",
  "sphinx_design>=0.3",
  "sphinxcontrib-bibtex",
  "myst-nb",
  "myst-parser",
]
nrel-wind = ["h5pyd"]
reanalysis = [
  "cdsapi",
  "xarray[parallel]",
  "h5py",  # Required for netcdf4
  "netcdf4",
]
examples = [
  "openoa[reanalysis,nrel-wind]",
  "jupyterlab"
]
all = ["openoa[develop,docs,examples]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["openoa", "test", "examples"]

[tool.setuptools.dynamic]
version = {attr = "openoa.__version__"}

[tool.coverage.report]
exclude_lines = [
  "# pragma: no cover",
  "def .+plot",
  "def plot_.+",
]

[tool.coverage.run]
# Coverage.py configuration file
# https://coverage.readthedocs.io/en/latest/config.html
branch = true
source = ["openoa/*"]
omit = [
  "setup.py",
  "tests/*"
]

[tool.pytest.ini_options]
python_files = [
  "test/*.py",
]
testpaths = [
  "test/unit/*.py",
  "test/regression/*.py",
]
cache_dir = ".cache"
filterwarnings = [
  "ignore::DeprecationWarning:sklearn.*:",
  "ignore::DeprecationWarning:patsy.*:",
  "ignore::DeprecationWarning:pygam.*:",
]

[tool.black]
# https://github.com/psf/black
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
# https://github.com/PyCQA/isort
profile = "black"
py_version = 39
src_paths = ["isort", "test"]
line_length = "100"
length_sort = "True"
length_sort_straight = "True"
lines_after_imports = "2"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = "openoa"
known_third_party = [
    "numpy",
    "scipy",
    "pandas",
    "pygam",
    "tqdm",
    "statsmodels",
    "scikit_learn",
    "EIA-python",
    "requests",
    "pyproj",
    "shapely"
]
